--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>NodeJs</groupId>
   <artifactId>NodeJS</artifactId>
-  <version>62-SNAPSHOT</version>
+  <version>64-SNAPSHOT</version>
   <packaging>war</packaging>
    
  
@@ -20,10 +20,25 @@
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
-      
+	  
+	  <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-deploy-plugin</artifactId>
+		<version>2.8</version>
+	  </plugin>
     </plugins>
+      
+   
 
  </build>
+ 
+ <distributionManagement>
+      <repository>
+        <id>central</id>
+        <name>central</name>
+         <url>http://localhost:8081/artifactory/npm1</url>
+      </repository>
+    </distributionManagement>
   </project>
   
  
